--- a/style.css
+++ b/style.css
@@ -515,3 +515,14 @@ padding: 5px;
   background-color: #f5f5f5;
   padding-bottom: 50px !important;
 }
+ 
+#perloder{
+  background:#000000 url(img/السعدني.gif) no-repeat center !important;
+    background-size: 40rem !important;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+}
