--- a/style.css
+++ b/style.css
@@ -224,8 +224,8 @@ section {
 }
 
 .swiper-slide {
-  width: 300px;
-  height: 400px;
+  width: 100px !important;
+  height: 100px;
   filter: grayscale(100%);
   border-radius: 20px;
   display: flex;
@@ -240,7 +240,7 @@ section {
 .swiper-slide {
   flex-shrink: 0;
   width:40vh !important;
-  height: 50vh !important;
+  height: 44vh !important;
   position: relative;
   transition-property: transform;
 }
@@ -401,23 +401,31 @@ section {
     background: 
       url("img/assest/1.png")
         no-repeat 50% 50% / cover;
+        width: auto !important;
   }
   
   .swiper-slide--2 {
     background:
     url("img/assest/2.png")
         no-repeat 50% 50% / cover;
+        width: auto !important;
+
   }
+
   .swiper-slide--3{
     background: 
     url("img/assest/4.png")
         no-repeat 50% 50% / cover;
+        width: auto !important;
+
   }
   
   .swiper-slide--4 {
     background: 
       url("img/assest/3.png")
         no-repeat 50% 50% / cover;
+        width: auto !important;
+
   }
   
 
